<resources>
    <string name="app_name">project_phonebook</string>
    <string name="w_e_l_c_o_m_e">W E L C O M E</string>
    <string name="light">light</string>
    <string name="choose_your_favorite">choose your favorite</string>
    <string name="dark">dark</string>
    <string name="_0478000000">0478000000</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_12_12_2020">12/12/2020</string>
    <string name="lastname">Lastname</string>
    <string name="ricky">Ricky</string>
    <string name="jay">Jay</string>
    <string name="phone">Phone</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="add">add</string>
    <string name="update">update</string>
    <string name="a_z">a - z</string>
    <string name="z_a">z - a</string>
</resources>