<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_activity_updatecontact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">

    <Button
        android:id="@+id/update_btnUpdate"
        android:layout_width="153dp"
        android:layout_height="41dp"
        android:drawableStart="@drawable/icon_update"
        android:text="@string/update"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toEndOf="@+id/update_btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/update_lblName"
        android:layout_width="322dp"
        android:layout_height="33dp"
        android:layout_marginTop="112dp"
        android:background="#00FFF7"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/update_lblDob"
        android:layout_width="322dp"
        android:layout_height="33dp"
        android:background="#00FFF7"
        android:text="@string/date_of_birth"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_txtEditEmail" />

    <TextView
        android:id="@+id/update_lblEmail"
        android:layout_width="322dp"
        android:layout_height="33dp"
        android:background="#00FFF7"
        android:text="Email"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_txtEditPhone" />

    <TextView
        android:id="@+id/update_lblPhone"
        android:layout_width="322dp"
        android:layout_height="33dp"
        android:background="#00FFF7"
        android:text="Phone"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_txtEditName" />

    <Button
        android:id="@+id/update_btnBack"
        android:layout_width="153dp"
        android:layout_height="41dp"
        android:layout_marginStart="44dp"
        android:drawableStart="@drawable/icon_back"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/update_txtEditName"
        android:layout_width="322dp"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_lblName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/update_txtEditPhone"
        android:layout_width="322dp"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_lblPhone"
        android:autofillHints="" />

    <EditText
        android:id="@+id/update_txtEditEmail"
        android:layout_width="322dp"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_lblEmail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/update_txtEditDob"
        android:layout_width="322dp"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="date"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_lblDob"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>